[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/module_input.gd" type="Script" id=1]
[ext_resource path="res://scripts/module_mover.gd" type="Script" id=2]
[ext_resource path="res://scripts/module_shaper.gd" type="Script" id=3]

[node name="Body" type="RigidBody2D"]
position = Vector2( 435, 200 )

[node name="Shaper" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Input" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Mover" type="Node2D" parent="."]
script = ExtResource( 2 )

[connection signal="move_left" from="Input" to="Mover" method="_on_Input_move_left"]
[connection signal="move_right" from="Input" to="Mover" method="_on_Input_move_right"]
