[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/module_mover.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/jump_normal_indicator.png" type="Texture" id=2]

[node name="Mover" type="Node2D"]
script = ExtResource( 1 )

[node name="NormalVec" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.4 )
show_behind_parent = true
scale = Vector2( 0.66, 0.66 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -32 )
